# FileWatcherCpp-config

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main  main.cpp
configs/: config.json
include/: json_fwd.hpp
temp_file/: elo.py  test1.py  test2.py
